added skeletal makefile

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,8 +1,31 @@
-CC = gcc
-CFLAGS = -std=c89
-FILES =
-OUTPUT =
+LINUXCC = gcc
+#BBBCC =
+#FSCC =
+
+LINUXFLAGS = -std=c89
+#BBBFLAGS = -std=c89
+#FSFLAGS = -std=c89
+
+LINUXFILES =
+#BBBFILES =
+#FSFILES =
+
+LINUXOUTPUT =
+#BBBOUTPUT =
+#FSOUTPUT =
 
 
-all: $(FILES)
-	$(CC) $(CFLAGS) $(FILES) -o $(OUTPUT)
+
+linux: $(LINUXFILES)
+	$(LINUXCC) $(LINUXFLAGS) $(LINUXFILES) -o $(LINUXOUTPUT)
+#bbb: $(BBBFILES)
+#	$(BBBCC) $(BBBFLAGS) $(BBBFILES) -o $(BBBOUTPUT)
+#fs: $(FILES)
+#	$(FSCC) $(FSFLAGS) $(FSFILES) -o $(FSOUTPUT)
+
+#all: $(FILES)
+#	$(CC) $(CFLAGS) $(FILES) -o $(OUTPUT)
+
+#target: prereq1 prereq2 prereq3
+#	command 1
+#	command 2
