bug fixes to get compilation working

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -2,26 +2,40 @@ LINUXCC = gcc
 #BBBCC =
 #FSCC =
 
-LINUXFLAGS = -std=c89
+# compile to c89 standard
+# show all warngings
+# stop compilation on first error
+# no optimization
+# define PROJECT1
+# define VERBOSE
+LINUXFLAGS = -std=c89 \
+			-Wall \
+			-Wfatal-errors \
+			-O0 \
+			-D PROJECT1 \
+			-D VERBOSE
+
 #BBBFLAGS = -std=c89
 #FSFLAGS = -std=c89
 
-LINUXFILES =
-#BBBFILES =
+# include source files
+include sources.mk
+
+LINUXFILES = $(SRCS)
+#BBBFILES
 #FSFILES =
 
-LINUXOUTPUT =
+LINUXOUTPUT = main.out
 #BBBOUTPUT =
 #FSOUTPUT =
-
 
 
 linux: $(LINUXFILES)
 	$(LINUXCC) $(LINUXFLAGS) $(LINUXFILES) -o $(LINUXOUTPUT)
 #bbb: $(BBBFILES)
-#	$(BBBCC) $(BBBFLAGS) $(BBBFILES) -o $(BBBOUTPUT)
+#	$(BBBCC) $(BBBFLAGS) $(SRC) $(BBBFILES) -o $(BBBOUTPUT)
 #fs: $(FILES)
-#	$(FSCC) $(FSFLAGS) $(FSFILES) -o $(FSOUTPUT)
+#	$(FSCC) $(FSFLAGS) $(SRC) $(FSFILES) -o $(FSOUTPUT)
 
 #all: $(FILES)
 #	$(CC) $(CFLAGS) $(FILES) -o $(OUTPUT)
