fixed conversion functions 8/8 tests pass

--- a/project1/src/Makefile
+++ b/project1/src/Makefile
@@ -2,20 +2,24 @@ LINUXCC = gcc
 #BBBCC =
 #FSCC =
 
+INC_DIR = ../include/
+INC_COMMON = ../include/common
+INC_CMSIS = ../include/CMSIS
+INC_KL25Z = ../include/kl25z
+INC = $(INC_DIR) $(INC_COMMON) $(INC_CMSIS) $(INC_KL25Z)
+INC_PARAMS=$(foreach d, $(INC), -I$d)
+
 # compile to c89 standard
 # show all warnings
 # show all errors
 # stop compilation on first error
 # no optimization
 # define PROJECT1
-# define VERBOSE
-LINUXFLAGS = -std=c89 \
-			-Wall \
-			-Werror
-			-Wfatal-errors \
-			-O0 \
-			-D PROJECT1 \
-			-D VERBOSE
+# compile with debugger support
+# include directory
+LINUXFLAGS = -std=c89 -I../include/ -I../include/common/ -Wall -Werror -Wfatal-errors -O0 -D PROJECT1 -D VERBOSE
+#			-g \
+#			-I$(INC_DIR)
 
 #BBBFLAGS = -std=c89
 #FSFLAGS = -std=c89
@@ -26,6 +30,10 @@ include sources.mk
 LINUXFILES = $(SRCS)
 #BBBFILES
 #FSFILES =
+
+#ifeq ($(PLATFORM), KL25Z)
+#	echo Building for platform: KL25Z
+#endif
 
 LINUXOUTPUT = main.out
 #BBBOUTPUT =
