--- a/project1/src/Makefile
+++ b/project1/src/Makefile
@@ -13,6 +13,7 @@ INC_DIR = ../include/
 INC_COMMON = ../include/common
 INC_CMSIS = ../include/CMSIS
 INC_KL25Z = ../include/kl25z
+KL25ZLD = ../platform/MKL25Z128xxx4_flash.ld
 #INC = $(INC_DIR) $(INC_COMMON) $(INC_CMSIS) $(INC_KL25Z)
 #INC_PARAMS=$(foreach d, $(INC), -I$d)
 STD = -std=c99
@@ -29,7 +30,6 @@ endif
 ifeq ($(PLATFORM), HOST)
 #	echo Building for platform: HOST
 CC=gcc
-LL = ld
 CFILES=$(FILES)
 CFLAGS =$(STD)\
 		-Wall\
@@ -46,13 +46,6 @@ endif
 ifeq ($(PLATFORM), BBB)
 #	echo Building for platform: BBB
 CC=arm-none-eabi-gcc
-LL = ld
-OUTPUT=project1.elf
-endif
-ifeq ($(PLATFORM), KL25Z)
-#	echo Building for platform: KL25Z
-CC=arm-linux-gnueabi-gcc
-LL = ld
 CFILES=$(FILES)
 CFLAGS =$(STD)\
 		-Wall\
@@ -66,27 +59,46 @@ CPPFLAGS =  -I$(INC_DIR)\
 LDFLAGS = -Map=project1.map
 OUTPUT=project1.elf
 endif
+ifeq ($(PLATFORM), KL25Z)
+#	echo Building for platform: KL25Z
+CC=arm-linux-gnueabi-gcc
+CFILES=$(FILES)
+CFLAGS =$(STD)\
+		-Wall\
+		-Werror\
+		-Wfatal-errors\
+		-O0
+CPPFLAGS =  -I$(INC_DIR)\
+			-I$(INC_COMMON)\
+			-D PROJECT1\
+			-D VERBOSE
+LDFLAGS = -Map=project1.map,\
+		  -T $(KL25ZLD)
+OUTPUT=project1.elf
+endif
 
+.PHONY: all
+all: build
 
 %.i: %.c
-	$(CC) $(CPPFLAGS) -E -o $@ $^
+	$(CC) $(CPPFLAGS) -E $^ -o $@
 
-%.asm: %.i
-	$(CC) $(CFLAGS) -S -o $@ $^
+%.asm: %.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) -S $^ -o $@
 
-%.o: %.asm
-	$(CC) $(CFLAGS) -c -o $@ $^
+%.o: %.c
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $^ -o $@
 
 .PHONY: compile-all
 compile-all: $(OBJS)
 
 .PHONY: build
 build: compile-all
-	$(LL) $(LDFLAGS) $(OBJS) -o $(OUTPUT)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -Wl,$(LDFLAGS) $(OBJS) -o $(OUTPUT)
 
 .PHONY: clean
 clean:
-	rm -r *.map *.out *.o *.i *.asm *.elf
+	rm *.map *.out *.o *.i *.asm *.elf
 #
 # compile to c89 standard				-std=c89
 # include 'include' directory			-I$(INC_DIR)
